--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "http-errors": "^2.0.0",
+    "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^2.0.0",
     "morgan": "^1.10.0",
     "pg": "^8.7.3"
